--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <link rel="stylesheet" href="Style.css">
         <title>
-            Bread
+            Swadd Menu
         </title>
     </head>
     <body>
