--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         </title>
     </head>
     <body>
-        <a class="btnlink" href="menu1.pdf">
+        <a class="btnlink" href="Menu2.pdf">
             <div class="button" align="center">
                 <p>
                     Menu
